classDiagram
    class Bank {
        -List~User~ __user_list
        -List~ATM_machine~ __atm_list
        -List~Seller~ __seller_list
        +add_user(User user)
        +search_user_from_id(String citizen_id) User
        +add_atm_machine(ATM_machine atm)
        +search_atm_machine(String atm_no) ATM_machine
        +add_seller(Seller seller)
        +search_seller(String name) Seller
        +search_account_from_card(String card_no) Account
        +search_account_from_account_no(String account_no) Account
    }

    class User {
        -String __citizen_id
        -String __name
        -List~Account~ __account_list
        +citizen_id String
        +name String
        +account_list List~Account~
        +add_account(Account account)
        +search_account(String account_no) Account
    }

    class Account {
        -String __account_no
        -float __amount
        -List~Transaction~ __transaction
        +account_no String
        +amount float
        +__add__(float amount) Account
        +__sub__(float amount) Account
        +transfer(float amount, Account target_account) Account
        +paid(float amount, Account target_account) Account
        +__iter__() Iterator
    }

    class SavingAccount {
        -Card __card
        +add_card(Card card)
        +get_card() Card
    }

    class FixDepositAccount {
    }

    class Transaction {
        -String __transaction_type
        -float __amount
        -float __total
        -String __target_account
        +__str__() String
    }

    class Card {
        -String __card_no
        -Account __account
        -String __pin
        +card_no String
        +account Account
        +pin String
    }

    class ATM_Card {
    }

    class Debit_Card {
    }

    class ATM_machine {
        +int withdraw_limit = 20000$
        +int transfer_limit = 100000$
        -String __atm_no
        -float __money
        +atm_no String
        +insert_card(Card card, String pin) String
        +deposit(Account account, float amount) ATM_machine
        +withdraw(Account account, float amount) ATM_machine
        +transfer(Account account, float amount, Account target_account) ATM_machine
    }

    class Seller {
        -String __name
        -List~EDC_machine~ __edc_list
        +name String
        +add_edc(EDC_machine edc)
        +search_edc_from_no(String edc_no) EDC_machine
        +paid(Account account, float amount, Account target_account)
    }

    class EDC_machine {
        -String __edc_no
        +edc_no String
        +paid(Debit_Card debit_card, float amount, Account target_account)
    }

    %% Inheritance relationships
    Account <|-- SavingAccount
    Account <|-- FixDepositAccount
    Card <|-- ATM_Card
    Card <|-- Debit_Card

    %% Composition/Association relationships
    Bank "1" *-- "*" User : contains
    Bank "1" *-- "*" ATM_machine : contains
    Bank "1" *-- "*" Seller : contains
    User "1" *-- "*" Account : owns
    Account "1" *-- "*" Transaction : records
    SavingAccount "1" o-- "0..1" Card : has
    Seller "1" *-- "*" EDC_machine : owns
    Card "*" --> "1" Account : linked to
